(fix) add npm bourbon, neat includes bitters/base

--- a/server/public/assets/sass/main.scss
+++ b/server/public/assets/sass/main.scss
@@ -1,6 +1,6 @@
-@import '../bourbon/bourbon';
+@import 'bourbon';
 @import '../base/base';
-@import '../neat/neat';
+@import 'neat';
 
 @import '_core.scss';
 @import '_header.scss';
