--- a/server/public/assets/base/_variables.scss
+++ b/server/public/assets/base/_variables.scss
@@ -1,5 +1,5 @@
 // Typography
-$base-font-family: $helvetica;
+$base-font-family: 'Lato', 'Helvetica Neue', 'Roboto', sans-serif;
 $heading-font-family: $base-font-family;
 
 // Font Sizes
