(fix) handle web client files

--- a/server/public/index.ejs
+++ b/server/public/index.ejs
@@ -15,7 +15,7 @@
 
         <div class="logo">
           <a ui-sref="dashboard">
-            <img src="img/logo.png" alt="MedUp Logo">
+            <img src="assets/img/logo.png" alt="MedUp Logo">
           </a>
         </div>
 
