--- a/server/public/index.ejs
+++ b/server/public/index.ejs
@@ -105,6 +105,6 @@
         </section>
 
       </section>
-      <script src="app/app.js"></script>
+      <script src="dist/bundle.js"></script>
     </body>
 </html>
