(feat) web client add-medications template

--- a/server/public/assets/base/_variables.scss
+++ b/server/public/assets/base/_variables.scss
@@ -23,6 +23,7 @@ $medium-gray: #999;
 $light-gray: #E2E2E2;
 $teal: #67B9A1;
 $red: #E76666;
+$green: #99D27F;
 
 // Font Colors
 $base-font-color: $dark-gray;
