--- a/server/public/assets/sass/_add-medications.scss
+++ b/server/public/assets/sass/_add-medications.scss
@@ -12,16 +12,21 @@
   @include outer-container(rem(820));
   background-color: #f1f1f1;
   padding: rem(46) 0 rem(42);
+  border-radius: 1%;
+  box-shadow: 0 1px 2px rgba(0,0,0,0.18);
 }
 
 .form-top {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
   padding: 0 rem(65);
   @include clearfix;
 
   input {
     margin-bottom: rem(24);
     background: #f1f1f1;
-    padding: rem(14) rem(32);
+    padding: rem(14) rem(24);
     font-size: rem(24);
     font-weight: 300;
     color: $dark-blue;
@@ -43,8 +48,7 @@ input[type="text"].med-dose-input {
 .select-reminder {
   text-align: center;
   font-size: rem(20);
-  margin-top: rem(32);
-  margin-bottom: rem(22);
+  margin: rem(32) auto rem(22);
   color: $dark-blue;
   font-weight: 300;
 }
@@ -52,27 +56,53 @@ input[type="text"].med-dose-input {
 .reminder-wrapper {
   display: flex;
   justify-content: space-between;
-}
-
-.radio-item {
-  float: left;
-  width: rem(133);
-  position: relative;
-  margin-right: rem(33);
-  text-align: center;
-  padding: rem(11) rem(21);
-  border: 1px solid rgba(151,151,151,0.52);
-}
-
-input[type=radio]:not(old) {
-  position: absolute;
-  top: 0;
-  left: 0;
   width: 100%;
-  height: rem(45);
-  margin: 0;
-  padding: 0;
-  opacity: 0;
+  margin-bottom: rem(38);
+}
+
+[type="checkbox"] {
+  border: 0; 
+  clip: rect(0 0 0 0); 
+  height: 1px; margin: -1px; 
+  overflow: hidden; 
+  padding: 0; 
+  position: absolute; 
+  width: 1px;
+}
+
+[type="checkbox"] + span {
+  display: block;
+  border: 1px solid rgba(151,151,151,0.52);
+  padding: rem(12) rem(24);
+  font-size: rem(18);
+  font-weight: 300;
+  color: $dark-blue;
+  cursor: pointer;
+  transition: all 0.3s $ease-out-quart;
+
+  i {
+    color: rgba(182,182,182,1);
+    margin-right: rem(8);
+    transition: all 0.3s $ease-out-quart;
+  }
+
+  &:hover {
+    border-color: $blue;
+  }
+}
+
+[type="checkbox"]:checked + span {
+  background-color: $blue;
+  color: #fff;
+  transition: all 0.3s $ease-out-quart;
+
+  i {
+    color: #fff;
+  }
+
+  &:hover {
+    background-color: darken($blue, 5%);
+  }
 }
 
 .custom-input {
@@ -85,3 +115,44 @@ input[type=radio]:not(old) {
     font-size: rem(20);
   }
 }
+
+.med-preview {
+  padding: rem(32) 8% rem(36);
+  background-color: $light-gray;
+
+  h4 {
+    text-align: center;
+    color: $blue;
+    font-size: rem(20);
+    font-weight: 300;
+  }
+}
+
+.submit-wrapper {
+  padding: rem(32) 0 0;
+
+  button {
+    display: block;
+    width: rem(322);
+    font-size: rem(24);
+    font-weight: 400;
+    color: #fff;
+    border-radius: 4px;
+    background-color: $green;
+    box-shadow: 0 1px 2px rgba(0,0,0,0.18);
+    margin: 0 auto;
+    transition: all 0.3s $ease-out-quart;
+
+    &:hover {
+      background-color: darken($green, 5%);
+    }
+  }
+}
+
+
+
+
+
+
+
+
