(feat) splash screen

--- a/server/public/app/components/dashboard/dashboard.html
+++ b/server/public/app/components/dashboard/dashboard.html
@@ -12,6 +12,13 @@
 
     <h3>Your healthy reminder</h3>
 
+    <div class="auth-button-wrapper">
+      
+      <a ui-sref="signin" class="auth-signin">Sign In</a>
+      <a ui-sref="signup" class="auth-signup">Sign Up</a>
+
+    </div>
+
   </div>
 
 </div>
