--- a/server/public/app/components/dashboard/dashboard.html
+++ b/server/public/app/components/dashboard/dashboard.html
@@ -1,24 +1,4 @@
 <div class="dashboard splash">
             
-  <div class="heading-wrapper">
-
-    <div class="primary-logo">
-      
-      <img src="assets/img/logo.png" alt="MedUp Logo">
-
-    </div>
-
-    <h1>MedUp</h1>
-
-    <h3>Your healthy reminder</h3>
-
-    <div class="auth-button-wrapper">
-      
-      <a ui-sref="signin" class="auth-signin">Sign In</a>
-      <a ui-sref="signup" class="auth-signup">Sign Up</a>
-
-    </div>
-
-  </div>
-
+  <ui-view> </ui-view>
 </div>
