(feat) main page view complete

--- a/client/scss/ionic.app.scss
+++ b/client/scss/ionic.app.scss
@@ -13,6 +13,7 @@ $energized:                       #ffc900 !default;
 $assertive:                       #ef473a !default;
 $royal:                           #886aea !default;
 $dark:                            #444 !default;
+$aqua:                            #4A7180 !default;
 */
 
 // The path for our ionicons font files, relative to the built CSS in www/css
