--- a/server/public/app/components/dashboard/dashboard.auth.html
+++ b/server/public/app/components/dashboard/dashboard.auth.html
@@ -1,10 +1,13 @@
+<div class="heading-wrapper auth-form">
+  
+  <h1>{{title}}</h1>
 
-<div id='auth'>
-  <h1>{{ }}</h1>
-  <form name="authForm" ng-submit='auth()'>
-    <input type='text'ng-model='user.username' required="">
-    <input type="password" ng-model='user.password' required="">
-    <button>Submit</button>
+  <form ng-submit="submit()">
+    
+    <input type="text" name="username" placeholder="Username">
+    <input type="password" name="password" placeholder="Password">
+    <button type="submit">{{action}}</button>
+
   </form>
-  <a href="#/signup">Don't have an account? <strong>Signup</strong> ...</a>
+
 </div>
