--- a/client/www/css/style.css
+++ b/client/www/css/style.css
@@ -1,56 +1,70 @@
-/* Empty. Add your own CSS if you like */
+/*
+ * All App CSS
+ */
 
 
-/* Item */
+/* ==========================================================================
+   Auth Views
+   ========================================================================== */
 
-.item {
-  border-width: 0px;
-  border-color: #f8f8f8;
-  overflow: inherit;
-}
-
-.active {
-  text-align: center;
-}
-
-.drug-thumb {
-  border-radius: 20%;
-}
-
-
-/* Main Page */
-
-/*Clock*/
-/* this import should be first line in css file else add as <link> in html*/
-.widget-clock.blue-light .digital {
-  text-align: center;
-  margin-bottom: 5%;
-}
-.widget-clock.blue-light .time {
-  font-family: 'Rationale', sans-serif;
-  font-size: 3.0em;
-  color: #4A9896;
-}
-
-/*Content*/
-hr {
+.user-auth-logo {
+  width: 150px;
+  height: 150px;
   display: block;
-  margin-right: 2em;
-  margin-left: 2em;
-  border-style: inset;
-  border-width: 1px;
-  border-top: 1px solid #DADADA;
-}
-H
-.title {
-  font-family: 'Lato', sans-serif;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 2em;
+  margin-bottom: 2em;
 }
 
-.time {
-  font-family: 'Lato', sans-serif;
+.user-auth {
+  background-color: transparent;
+  color: white;
 }
 
-.main-menu {
+.user-auth-background {
+  background-image: url("../img/background.png");
+  background-size: cover;
+}
+
+.user-auth input[type="text"] {
+  background: transparent;
+  color: white;
+  text-align: center;
+}
+
+.user-auth input[type="text"]::-webkit-input-placeholder {
+  text-align: center;
+  color: white;
+}
+
+.user-auth hr {
+  display: block;
+  height: 1px;
+  border: 0;
+  border-top: 1px solid white;
+  margin: 1em 0;
+  padding: 0;
+}
+
+.user-auth label.item.item-input.item-floating-label {
+  border-color: transparent;
+}
+
+.user-auth button.button.button-block.button-royal {
+  margin-top: 4em;
+}
+
+.user-auth-redirect {
+  text-align: center;
+}
+
+
+/* ==========================================================================
+   Calendar View
+   ========================================================================== */
+
+.user-calendar {
   margin-top: 10%;
   padding-top: 5%;
   text-align: center;
@@ -59,12 +73,93 @@ H
   font-family: 'Lato', sans-serif;
 }
 
-.healthChart {
-  position: relative;
-  right: 17%;
-  padding-right: 20%;
+.user-calendar .item.item-divider {
+  background-color: #E2EBEF;
 }
 
-.my-footer {
-  text-align: right;
+.user-calendar .item {
+  border-width: 0px;
 }
+
+
+/* ==========================================================================
+   Dashboard View
+   ========================================================================== */
+
+
+/* Clock */
+
+.widget-clock.blue-light .digital {
+  text-align: center;
+  margin-top: 5%;
+  margin-bottom: 5%;
+}
+
+.widget-clock.blue-light .time {
+  font-family: 'Rationale', sans-serif;
+  font-size: 3.0em;
+  color: #4A9896;
+}
+
+
+/* Content */
+
+.user-dashboard {
+  margin-top: 10%;
+  padding-top: 5%;
+  text-align: center;
+  text-transform: uppercase;
+  font-size: 90%;
+  font-family: 'Lato', sans-serif;
+}
+
+.user-dashboard hr {
+  display: block;
+  margin-right: 2em;
+  margin-left: 2em;
+  border-style: inset;
+  border-width: 1px;
+  border-top: 1px solid #DADADA;
+}
+
+.user-dashboard .healthChart {
+  margin-top: 5%;
+  position: relative;
+  right: 20%;
+}
+
+
+/* ==========================================================================
+   Health Stats
+   ========================================================================== */
+
+.user-health-stats {
+  margin-top: 3em;
+  text-align: center;
+  text-transform: uppercase;
+  font-size: 90%;
+  font-family: 'Lato', sans-serif;
+}
+
+
+/* ==========================================================================
+   Medications View
+   ========================================================================== */
+
+
+/* ==========================================================================
+   MedForm View
+   ========================================================================== */
+
+.user-medform {
+  margin-top: 1em;
+}
+
+.user-medform .item {
+  border-width: 0px;
+}
+
+
+/* ==========================================================================
+   Footer
+   ========================================================================== */
