(feat) auth transition

--- a/server/public/app/components/dashboard/dashboard.splash.html
+++ b/server/public/app/components/dashboard/dashboard.splash.html
@@ -4,7 +4,7 @@
   </div>
   <h1>MedUp</h1>
   <h3>Your healthy reminder</h3>
-  <div class="auth-button-wrapper">
+  <div class="auth-button-wrapper" ng-hide="isAuth.value">
     <a ui-sref="dashboard.signin" class="auth-signin">Sign In</a>
     <a ui-sref="dashboard.signup" class="auth-signup">Sign Up</a>
   </div>
