(update) change src for checklist-model

--- a/server/public/index.ejs
+++ b/server/public/index.ejs
@@ -39,6 +39,6 @@
       </section>
 
       <script src="dist/bundle.js"></script>
-      <script src='assets/checklist-model/checklist-model.js'></script>
+      <script src='checklist-model.js'></script>
     </body>
 </html>
