--- a/server/public/assets/base/_grid-settings.scss
+++ b/server/public/assets/base/_grid-settings.scss
@@ -7,8 +7,9 @@ $gutter: 0em;
 // $max-width: 1200px;
 
 // Neat Breakpoints
-$medium-screen: 600px;
-$large-screen: 900px;
+$small-screen: 768px;
+$medium-screen: 1080px;
+$large-screen: 1600px;
 
 $medium-screen-up: new-breakpoint(min-width $medium-screen 4);
 $large-screen-up: new-breakpoint(min-width $large-screen 8);
