--- a/server/public/assets/sass/_core.scss
+++ b/server/public/assets/sass/_core.scss
@@ -3,4 +3,9 @@ body, html {
   width: 100%;
   height: 100%;
   margin: 0;
+
+  @media screen and (max-height: 738px) {
+    height: auto;
+    position: static;
+  }
 }
