--- a/server/public/assets/sass/_content.scss
+++ b/server/public/assets/sass/_content.scss
@@ -51,10 +51,10 @@ navbar {
 
     h2 {
       font-weight: 100;
-      @include media($medium-screen) {
+      @include media($small-screen) {
         font-size: rem(24);
       }
-      @include media($large-screen) {
+      @include media($medium-screen) {
         font-size: rem(48);
       }
       color: #fff;
