(update) remove profile tab

--- a/server/public/index.ejs
+++ b/server/public/index.ejs
@@ -19,8 +19,7 @@
 
         <div class="header-nav">
           <ul>
-            <li><a ur-sref="profile">Profile</a></li>
-            <li><a ur-sref="profile">Logout</a></li>
+            <li><a ui-sref="logout">Logout</a></li>
           </ul>
         </div>
 
