(fix) add notifications with single input

--- a/server/public/app/components/add-medication/add-medication.html
+++ b/server/public/app/components/add-medication/add-medication.html
@@ -28,8 +28,8 @@
           </label> -->
 
           <div class="time-picker">
-            <uib-timepicker ng-model="time1" show-meridian="ismeridian"></uib-timepicker>
-            <button type='button' ng-click='addTime(time1)'>Add</button>
+            <uib-timepicker ng-model="time" show-meridian="ismeridian"></uib-timepicker>
+            <button type='button' ng-click='addTime(time)'>Add</button>
           </div>
 
         </div>
