--- a/server/public/app/components/medications/view-medications.html
+++ b/server/public/app/components/medications/view-medications.html
@@ -1,19 +1,19 @@
 <div class="view-state">
-  
+
   <div class="top-heading">
-    
+
     <h1>Your Medications</h1>
 
   </div>
 
   <div class="med-list">
-    
+
     <ul>
-      
+
       <li class="med-card" ng-repeat="medication in medications">
-        
+
         <div class="med-left">
-          
+
           <h3 class="med-name">{{medication.info.name}} <span class="dose">{{medication.info.dose}}</span></h3>
 
           <span class="instructions">{{medication.info.instruct}}</span>
@@ -24,7 +24,7 @@
           <ul>
             <li ng-repeat="time in medication.notifications">
               <i class="fa fa-clock-o"></i>
-              <span class="time">{{time}}</span>
+              <span class="time">{{time.at}}</span>
             </li>
           </ul>
         </div>
