(feat) edit screen

--- a/server/public/app/components/edit-medication/edit-medication.html
+++ b/server/public/app/components/edit-medication/edit-medication.html
@@ -1,20 +1,20 @@
-<div class="add-state">
+<div class="edit-state">
 
   <div class="top-heading">
 
-    <h1>Your Medications</h1>
+    <h1>Edit your Medications</h1>
 
   </div>
 
   <div>
     <uib-timepicker ng-model="time1" show-meridian="ismeridian"></uib-timepicker>
-    <button type='button' ng-click='addTime(time1)'>Add</button>
+    <button type='button' ng-click='editTime(time1)'>Edit</button>
     <uib-timepicker ng-model="time2" show-meridian="ismeridian"></uib-timepicker>
-    <button type='button' ng-click='addTime(time2)'>Add</button>
+    <button type='button' ng-click='editTime(time2)'>Edit</button>
     <uib-timepicker ng-model="time3" show-meridian="ismeridian"></uib-timepicker>
-    <button type='button' ng-click='addTime(time3)'>Add</button>
+    <button type='button' ng-click='editTime(time3)'>Edit</button>
     <uib-timepicker ng-model="time4" show-meridian="ismeridian"></uib-timepicker>
-    <button type='button' ng-click='addTime(time4)'>Add</button>
+    <button type='button' ng-click='editTime(time4)'>Edit</button>
   </div>
 
   <div class="med-form-wrapper">
