--- a/server/public/app/components/add-medication/add-medication.html
+++ b/server/public/app/components/add-medication/add-medication.html
@@ -53,7 +53,7 @@
 
           <div class="med-notifications">
             <ul>
-              <li ng-repeat="time in medication.display">
+              <li ng-repeat="time in display">
                 <i class="fa fa-clock-o"></i>
                 <span class="time">{{time}}</span>
               </li>
